# midori

./: .coderabbit.yaml  .gitignore  Cargo.toml  TODO.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: loop-reviewer.md  review-loop.md
.claude/commands/: design-review.md
.claude/skills/design-review/: SKILL.md
.claude/skills/doc-context-free/: SKILL.md
.claude/skills/find-contradiction/: SKILL.md
.claude/skills/review-loop/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
crates/midori-core/: CHANGELOG.md  Cargo.toml
crates/midori-core/src/: ipc.rs  lib.rs  pipeline.rs  shm.rs  value.rs
crates/midori-driver-midi/: Cargo.toml
crates/midori-driver-osc/: Cargo.toml
crates/midori-runtime/: Cargo.toml
crates/midori-runtime/src/: error.rs  events_schema.rs  main.rs
crates/midori-runtime/src/events_schema/: loader.rs  mod.rs  tests.rs  types.rs  validator.rs
crates/midori-sdk/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/midori-sdk/src/: driver.rs  ffi.rs  lib.rs  spsc.rs
design/: 00-naming.md  01-overview.md  02-architecture.md  03-tech-stack.md  04-runtime-cli.md  05-future.md  06-error-handling.md  07-ui-ux.md  08-ai.md  09-plugin.md  10-driver-plugin.md  12-distribution.md  13-ecosystem-readiness.md  14-repository-structure.md  15-sdk-bindings-api.md  16-driver-events-schema.md  17-side-channel.md  DESIGN_REVIEW.md  README.md  draft-device-config-type.md  draft-driver-plugin.md  draft-driver-sdk.md  draft-widget-render.md  timing.md
design/07-ui-ux/: 01-principles.md  02-tone.md  03-navigation.md  04-dashboard.md  05-adapter.md  05-device-config.md  06-graph.md  07-profile.md  08-preferences.md  09-errors.md  10-playfulness.md  10-widgets.md  README.md
design/11-security/: 00-overview.md  01-driver-sandbox.md  02-widget.md  03-ai.md  04-plugin-config.md
design/17-driver-comm/: 00-overview.md  01-inline-ring.md
design/config/: 00-component-types.md  01-preferences.md  02-adapter.md  02-device-config.md  02-input-source-profile.md  03-mapper.md  04-output-target-profile.md  04-workspace.md  05-profile.md  expr.md  value-types.md
design/config/drivers/: midi.md  osc-vrchat.md  osc.md
design/config/mapper-nodes/: 01-simple.md  02-array.md  03-compound.md  04-math.md  05-signal.md
design/config/syntax/: 01-expr.md  02-value-types.md  03-storage-model.md
design/layers/01-input-driver/: requirements.md
design/layers/02-input-recognition/: binding-requirements.md  definition-requirements.md  layout-requirements.md  requirements.md  signal-specifier.md
design/layers/03-mapper/: requirements.md
design/layers/04-output-recognition/: requirements.md
design/layers/05-output-driver/: requirements.md
design/layers/cross/: timing.md
design/proposals/: README.md  side-channel.md  variable-ring.md
profiles/: els03-vrchat-simple.yaml
profiles/adapters/vrchat-osc/: vrchat-osc.yaml
profiles/adapters/yamaha-els03/: yamaha-els03.yaml
profiles/adapters/yamaha-els03/origin/: Switch Codes.html  System Exclusive.html
profiles/devices/vrchat-osc/: vrchat-osc.yaml
profiles/devices/yamaha-els03/: ELS-03-midi-reference.md  yamaha-els03.yaml
profiles/devices/yamaha-els03/origin/: Channel Message.html  Contents.html  MIDI Implementation Chart.html  MIDI Parameters.html
profiles/devices/yamaha-els03/origin/resources/: sheet.css
profiles/mappers/: els03-vrchat-simple.yaml
