[package]
name = "midori-driver-osc"
version = "0.1.0"
edition = "2021"
description = "Official OSC driver for the Midori signal bridge"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mew-ton/midori"

[[bin]]
name = "midori-driver-osc"
path = "src/main.rs"

[dependencies]
midori-sdk = { workspace = true }

[lints]
workspace = true
