[package]
name = "midori-runtime"
version = "0.1.0"
edition = "2021"
description = "CLI and pipeline orchestrator for the Midori signal bridge"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mew-ton/midori"

[[bin]]
name = "midori"
path = "src/main.rs"

[dependencies]
midori-core = { workspace = true }
