[package]
name = "midori-sdk"
version = "0.1.0"
edition = "2021"
description = "Driver SDK for the Midori signal bridge: shared types, SPSC ring buffer, and CLI scaffolding"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mew-ton/midori"
homepage = "https://github.com/mew-ton/midori"
documentation = "https://docs.rs/midori-sdk"
readme = "README.md"
keywords = ["midi", "osc", "ipc", "driver", "sdk"]
categories = ["api-bindings", "external-ffi-bindings", "development-tools"]

[dependencies]
midori-core = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"

[build-dependencies]
cbindgen = { version = "0.29", default-features = false }

# midori-sdk は SPSC リングバッファ実装で UnsafeCell を扱うため、
# workspace の `unsafe_code = "forbid"` をクレート単位で `deny` に緩める。
# unsafe を使う箇所には個別に `#[allow(unsafe_code)]` を付け、SAFETY コメントで根拠を示す。
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all         = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
